--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,7 @@
             <h2 class="text-center">Preferencias y Restricciones</h2>
             <div class="mb-3">
                 <label class="form-label">Alergias e intolerancias</label>
-                <input type="text" class="form-control" placeholder="Ej. Maní, mariscos, gluten...">
+                <input type="text" class="form-control" placeholder="Poner a que eres alergico">
             </div>
             <div class="mb-3">
                 <label class="form-label">Tipo de dieta</label>
