--- a/templates/planificacion.html
+++ b/templates/planificacion.html
@@ -45,14 +45,14 @@
         </section>
 
         <section class="bg-white p-4 rounded">
-            <h2>Herramientas</h2>
+                <h3 class="mt-4">Herramientas</h3>
             <ul class="list-group">
-                <li class="list-group-item">Calculadora de IMC</li>
-                <li class="list-group-item">Tasa Metabólica Basal (TMB)</li>
-                <li class="list-group-item">Gasto Calórico Total (GCT)</li>
-                <li class="list-group-item">Peso Corporal Ideal</li>
-                <li class="list-group-item">Calculadora de Macronutrientes</li>
-                <li class="list-group-item">Analizador de Recetas</li>
+            <li class="list-group-item"><a href="/imc">Calculadora de IMC</a></li>
+            <li class="list-group-item"><a href="/tmb">Tasa Metabólica Basal (TMB)</a></li>
+            <li class="list-group-item"><a href="/gct">Gasto Calórico Total (GCT)</a></li>
+            <li class="list-group-item"><a href="/ideal">Peso Corporal Ideal</a></li>
+            <li class="list-group-item"><a href="/macros">Calculadora de Macronutrientes</a></li>
+            <li class="list-group-item"><a href="/analizador">Analizador de Recetas</a></li>
             </ul>
         </section>
     </main>
