--- a/templates/analizador.html
+++ b/templates/analizador.html
@@ -129,6 +129,7 @@ function autocompletarEjemplo() {
         rows[rows.length-1].querySelector('input[name="cantidad"]').value = 50;
     }
 }
+{% include 'menu.html' %}
 </script>
 </body>
 </html>
